--- a/frontend/main.css
+++ b/frontend/main.css
@@ -1,3 +1,13 @@
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
 @media screen and (min-width: 768px) {
   body {
     background-image: url(image/ours_fond.png);
@@ -12,19 +22,45 @@ header {
   background: linear-gradient(to left, #e46160, #fff);
   position: relative;
 }
+header h1 {
+  font-family: "Dancing Script", cursive;
+  color: #fff;
+  font-size: 8rem;
+  text-align: center;
+}
 
 nav {
   width: 100%;
   position: absolute;
   bottom: 0px;
-  height: 20%;
+  height: 30%;
   background-color: #000;
+}
+nav #icon-content {
+  max-width: 980px;
+  margin: auto;
+  display: flex;
+  padding: 1% 3% 0% 3%;
+}
+nav #icon-home, nav #icon-cart {
+  width: 50%;
+}
+nav #icon-home {
+  text-align: left;
+}
+nav #icon-cart {
+  text-align: right;
+}
+nav .fas {
+  color: #fff;
+  font-size: 2.5rem;
+  margin-top: 1%;
 }
 
 #wrap {
   max-width: 980px;
-  height: 900px;
   margin: auto;
+  z-index: 2;
 }
 
 section {
@@ -50,9 +86,10 @@ section {
 article {
   align-items: center;
   width: 90%;
-  height: 150px;
   margin-top: 5%;
   background-color: #a5a2a2;
+  text-align: center;
+  padding: 10px;
 }
 @media screen and (min-width: 570px) and (max-width: 768px) {
   article {
@@ -62,6 +99,122 @@ article {
 @media screen and (min-width: 768px) {
   article {
     width: 30%;
+  }
+}
+article h2 {
+  font-family: "Pacifico", cursive;
+  color: #fff;
+  font-size: 2rem;
+}
+article img {
+  width: 70%;
+  height: 150px;
+  background-color: #706d6d;
+  margin-bottom: 10%;
+}
+article .infos {
+  background-color: #fff;
+  width: 95%;
+  padding: 5px;
+  margin: auto;
+}
+article .description {
+  font-family: "Roboto", sans-serif;
+  color: #706d6d;
+  font-size: 0.8rem;
+  text-align: left;
+  margin-bottom: 15px;
+}
+article .align {
+  display: flex;
+  justify-content: space-around;
+}
+article .prix {
+  font-family: "Roboto", sans-serif;
+  color: #e56161;
+  font-weight: 600;
+  font-size: 2rem;
+}
+article .want-some {
+  width: 60%;
+  border-radius: 9px;
+  background-color: #000;
+  text-align: center;
+  height: 30px;
+}
+article .want-some .fas {
+  color: #fff;
+}
+article #ajouter {
+  background-color: #000;
+  color: #fff;
+  font-size: 1rem;
+  font-style: italic;
+  border: none;
+  border-radius: 40px;
+  padding: 7px;
+  height: 25px;
+}
+article.article__first {
+  background-color: #9e6e6e;
+}
+article.article__two {
+  background-color: #981313;
+}
+article.article__three {
+  background-color: #d28080;
+}
+article.article__four {
+  background-color: #e1c6c6;
+}
+article.article__five {
+  background-color: #e56161;
+}
+
+footer {
+  background-color: #000;
+  color: #fff;
+  font-family: "Roboto", sans-serif;
+  font-size: 0.8rem;
+  text-align: center;
+  padding: 2%;
+  margin-top: 45px;
+  z-index: 1;
+}
+footer ul {
+  padding: 0;
+}
+footer li {
+  list-style-type: none;
+}
+
+#ours-dessin {
+  display: none;
+}
+@media screen and (min-width: 570px) and (max-width: 768px) {
+  #ours-dessin {
+    display: block;
+    text-align: right;
+    position: absolute;
+    right: 0px;
+    bottom: 80px;
+    z-index: 0;
+  }
+  #ours-dessin img {
+    width: 80%;
+  }
+}
+@media screen and (min-width: 768px) {
+  #ours-dessin {
+    display: block;
+    text-align: right;
+    position: absolute;
+    right: 150px;
+    bottom: 80px;
+    z-index: 0;
+  }
+  #ours-dessin img {
+    width: 150%;
   }
 }
 
