--- a/frontend/sass/style.scss
+++ b/frontend/sass/style.scss
@@ -1,6 +1,25 @@
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+//colors :
+$ours1:#9e6e6e;
+$ours2:#981313;
+$ours3:#d28080;
+$ours4:#e1c6c6;
+$ours5:#e56161;
+$general:#e56161;
+$text:#706d6d;
+
+
 $breakpoints: (
   tablette : 768px,
   mobile : 570px);
+
+// font-family: 'Dancing Script', cursive;
+// font-family: 'Pacifico', cursive;
+// font-family: 'Roboto', sans-serif;
 
 @mixin ecran {
   @media screen and (min-width : map-get($breakpoints, tablette)){
@@ -20,6 +39,9 @@ $breakpoints: (
 }
 
 body{
+  position: relative;
+  display: flex;
+  flex-direction: column;
     @include ecran{
         background-image: url(image/ours_fond.png);
         background-repeat: no-repeat;
@@ -32,20 +54,48 @@ header {
     height: 250px;
     background : linear-gradient(to left, #e46160, #fff);
     position: relative;
+    h1{
+      font-family: 'Dancing Script', cursive;
+      color: #fff;
+      font-size: 8rem;
+      text-align: center;
+    }
 }
 
 nav {
     width: 100%;
     position: absolute;
     bottom: 0px;
-    height: 20%;
+    height: 30%;
     background-color: #000;
+    #icon-content{
+      max-width: 980px;
+      margin: auto;
+      display: flex;
+      padding: 1% 3% 0% 3%;
+    }
+    #icon-home, #icon-cart{
+      width: 50%;
+    }
+    #icon-home{
+      text-align: left;
+    }
+    #icon-cart{
+      text-align: right;
+    }
+    .fas{
+      color: #fff;
+      font-size: 2.5rem;
+      margin-top: 1%;
+    }
 }
+
+
 
 #wrap{
     max-width: 980px;
-    height: 900px;
     margin: auto;
+    z-index: 2;
 }
 
 section{        
@@ -63,17 +113,135 @@ section{
         justify-content: space-around;
     }
 }
+// mise en forme d'un bloc article
 
 article{
     align-items: center;
     width: 90%;
-    height: 150px;
     margin-top: 5%;
     background-color: rgb(165, 162, 162);
+    text-align: center;
+    padding: 10px;
     @include tablette{
         width: 45%;
     }
     @include ecran{
         width: 30%;
     }
+    h2{
+      font-family: 'Pacifico', cursive;
+      color:#fff;
+      font-size: 2rem;
+    }
+    img{
+      width:70%;
+      height:150px;
+      background-color: $text;
+      margin-bottom: 10%;
+    }
+    .infos{
+      background-color: #fff;
+      width: 95%;
+      padding: 5px;
+      margin: auto;
+    }
+    .description{
+      font-family: 'Roboto', sans-serif;
+      color:$text;
+      font-size: 0.8rem;
+      text-align: left;
+      margin-bottom: 15px;
+    }
+    .align{
+      display: flex;
+      justify-content: space-around;
+    }
+    .prix{
+      font-family: 'Roboto', sans-serif;
+      color: $general;
+      font-weight: 600;
+      font-size: 2rem;
+    }
+    .want-some{
+      width: 60%;
+      border-radius: 9px;
+      background-color: #000;
+      text-align: center;
+      height: 30px;
+      .fas{
+        color: #fff;
+      }
+    }
+    #ajouter{
+      background-color: #000;
+      color:#fff;
+      font-size: 1rem;
+      font-style: italic;
+      border: none;
+      border-radius: 40px;
+      padding: 7px;
+      height: 25px;
+    }
+    &.article__first{
+      background-color: $ours1;
+    }
+    &.article__two{
+      background-color: $ours2;
+    }
+    &.article__three{
+      background-color: $ours3;
+    }
+    &.article__four{
+      background-color: $ours4;
+    }
+    &.article__five{
+      background-color: $ours5;
+    }
+}
+
+//footer
+
+footer{
+  background-color: #000;
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  font-size: 0.8rem;
+  text-align: center;
+  padding: 2%;
+  margin-top: 45px;
+  z-index: 1;
+  ul{
+    padding: 0;
+  }
+  li{
+    list-style-type: none;
+  }
+}
+
+#ours-dessin{
+  display: none;
+
+  @include tablette{
+    display: block;
+    text-align: right;
+    position: absolute;
+    right: 0px;
+    bottom: 80px;
+    z-index: 0;
+    img{
+      width: 80%;
+    }
+  }
+  @include ecran{
+    display: block;
+    text-align: right;
+    position: absolute;
+    right: 150px;
+    bottom: 80px;
+    z-index: 0;
+    img{
+      width: 150%;
+    }
+  }
+
 }
