--- a/frontend/main.css
+++ b/frontend/main.css
@@ -156,8 +156,8 @@ header #orinoco img {
 }
 @media screen and (min-width: 769px) {
   #navigation #icon-left #icon-home, #navigation #icon-left .camera-icon {
-    margin-right: 2%;
-    margin-left: 2%;
+    margin-right: 3%;
+    margin-left: 3%;
   }
 }
 #navigation #icon-left .svg-ours, #navigation #icon-left .svg-meuble {
@@ -167,12 +167,13 @@ header #orinoco img {
 }
 @media screen and (min-width: 570px) and (max-width: 769px) {
   #navigation #icon-left .svg-ours, #navigation #icon-left .svg-meuble {
-    margin-right: 10%;
+    margin-right: 12%;
+    margin-left: 12%;
   }
 }
 @media screen and (min-width: 769px) {
   #navigation #icon-left .svg-ours, #navigation #icon-left .svg-meuble {
-    margin-right: 2%;
+    margin-right: 3%;
   }
 }
 #navigation #icon-left .svg-ours {
@@ -192,6 +193,11 @@ header #orinoco img {
   -webkit-mask-size: 52px;
   width: 76px;
   height: 33px;
+}
+@media screen and (min-width: 570px) {
+  #navigation #ours {
+    margin: 1% 3% 0% 3%;
+  }
 }
 #navigation .fas {
   color: #fff;
