--- a/frontend/sass/layout.scss
+++ b/frontend/sass/layout.scss
@@ -125,14 +125,15 @@ body{
           display: flex;
           align-items: center;
         }
+
         #icon-home, .camera-icon{
           margin-right: 5%;
           @include tablette_ecran{
             margin-right: 10%;
           }
           @include ecran{
-            margin-right: 2%;
-            margin-left: 2%;
+            margin-right: 3%;
+            margin-left: 3%;
           }
         }
         .svg-ours, .svg-meuble{
@@ -140,10 +141,11 @@ body{
           margin-top: 1%;
           margin-left: 2%;
           @include tablette{
-            margin-right: 10%;
+            margin-right: 12%;
+            margin-left: 12%;
           }
           @include ecran{
-            margin-right: 2%;
+            margin-right: 3%;
           }
         }
         
@@ -164,6 +166,11 @@ body{
           -webkit-mask-size: 52px;
           width: 76px;
           height: 33px;
+        }
+      }
+      #ours{
+        @include tablette_ecran{
+          margin: 1% 3% 0% 3%;
         }
       }
       .fas{
