--- a/frontend/main.css
+++ b/frontend/main.css
@@ -1036,8 +1036,8 @@ form #civilite p, form #adresse p, form #mail p {
   font-size: 1.2rem;
 }
 
-table {
-  width: 100%;
+form > div {
+  display: flex;
 }
 
 .label {
@@ -1051,15 +1051,20 @@ table {
 @media screen and (min-width: 570px) {
   .label {
     font-size: 1.3rem;
+    margin-right: 2%;
+    margin-bottom: 2%;
   }
 }
 
+.champ-input {
+  width: 100%;
+  text-align: left;
+}
+
 .input {
-  margin-left: 2%;
   border: none;
   height: 30px;
-  margin-bottom: 3%;
-  width: 90%;
+  width: 80%;
 }
 
 #cp-mobile {
