--- a/frontend/sass/card.scss
+++ b/frontend/sass/card.scss
@@ -133,8 +133,8 @@ h2{
     }
   }
   
-  table{
-    width: 100%;
+  form > div{
+    display: flex;
   }
   
   .label{
@@ -146,15 +146,19 @@ h2{
     vertical-align: top;
     @include tablette_ecran{
       font-size: 1.3rem;
+      margin-right: 2%;
+      margin-bottom: 2%;
     }
+  }
+  .champ-input{
+    width: 100%;
+    text-align: left;
   }
   
   .input{
-    margin-left: 2%;
     border: none;
     height: 30px;
-    margin-bottom: 3%;
-    width: 90%;
+    width: 80%;
   }
   
   #cp-mobile{
