--- a/frontend/main.css
+++ b/frontend/main.css
@@ -918,6 +918,8 @@ h2 {
   border: none;
   padding: 2%;
   font-size: 0.9rem;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 @media screen and (min-width: 570px) {
   #card-back button, #contact-back button {
@@ -1036,13 +1038,15 @@ form #civilite p, form #adresse p, form #mail p {
   font-size: 1.2rem;
 }
 
-form > div {
-  display: flex;
+@media screen and (min-width: 570px) {
+  form > div {
+    display: flex;
+  }
 }
 
 .label {
   width: 20%;
-  text-align: right;
+  text-align: left;
   font-family: "Pacifico", cursive;
   font-size: 1rem;
   color: #fff;
@@ -1050,6 +1054,8 @@ form > div {
 }
 @media screen and (min-width: 570px) {
   .label {
+    width: 20%;
+    text-align: right;
     font-size: 1.3rem;
     margin-right: 2%;
     margin-bottom: 2%;
@@ -1064,7 +1070,12 @@ form > div {
 .input {
   border: none;
   height: 30px;
-  width: 80%;
+  width: 100%;
+}
+@media screen and (min-width: 570px) {
+  .input {
+    width: 80%;
+  }
 }
 
 #cp-mobile {
