--- a/frontend/sass/layout.scss
+++ b/frontend/sass/layout.scss
@@ -3,7 +3,7 @@ body{
     display: flex;
     flex-direction: column;
       @include ecran{
-          background-image: url(image/ours_fond.png);
+          background-image: url(./image/ours_fond.png);
           background-repeat: no-repeat;
           background-size: cover;
           background-position-x: -330px;
@@ -150,17 +150,17 @@ body{
         }
         
         .svg-ours{
-          mask: url(image/ours-icon.svg);
+          mask: url(./image/ours-icon.svg);
           mask-size: 35px;
           -webkit-mask-size: 35px;
-          -webkit-mask:url(image/ours-icon.svg);
+          -webkit-mask:url(./image/ours-icon.svg);
           -webkit-mask-repeat: no-repeat;
           width: 37px;
           height: 30px;
         }
         .svg-meuble{ 
-          mask: url(image/furniture-icon2.svg);
-          -webkit-mask:url(image/furniture-icon2.svg);
+          mask: url(./image/furniture-icon2.svg);
+          -webkit-mask:url(./image/furniture-icon2.svg);
           -webkit-mask-repeat: no-repeat; 
           mask-size: 52px;
           -webkit-mask-size: 52px;
@@ -245,3 +245,4 @@ footer{
       }
     }
   }
+  
